# FinalProjectRepo

./: README.md  pyproject.toml
src/: PyProject.py  dpi.py  gui.py  gui_tkinter.py  imdb_api.py
